preview images are no longer cut off on small screens

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -45,7 +45,6 @@
 }
 
 .articlePreview {
-  max-width: 500px;
   margin-top: 25px;
   margin-bottom: 25px;
 }
